<resources>
    <string name="app_name">CarControl</string>

    <!--main-->
    <string name="main_menu_app">app</string>
    <string name="main_menu_music">music</string>
    <string name="main_menu_car">car</string>
    <string name="main_menu_setting">setting</string>


    <!--setting-->
    <string name="setting_system">系统设置</string>
    <string name="setting_car">车辆设置</string>
    <string name="connect">连接</string>
    <string name="common">通用</string>
    <string name="mobile_connect">手机互联</string>
    <string name="audio">音频</string>

    <string name="doors_and_windows_control">门窗控制</string>
    <string name="atmosphere_lamp">氛围灯</string>
    <string name="driving_assistance_system_control">驾驶辅助系统控制</string>
    <string name="tailgate_control">尾门控制</string>
    <string name="chair_setting">座椅设置</string>
    <string name="wireless_charging_of_Mobile_setting">手机无线充电设置</string>
    <string name="out_mirror_light_setting">外后视镜设置</string>
    <string name="out_light_setting">外灯设置</string>
    <string name="others">其他</string>


    <string name="call">拨号</string>
    <string name="contact">联系人</string>
    <string name="bluetooth">蓝牙</string>


    <!--app_frag_home_car-->
    <string name="home_car_flow">能量流</string>
    <string name="home_car_history">历史能耗</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



    <string name="hot">热点</string>
    <string name="wifi">WIFI</string>
</resources>
