<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
            android:id="@+id/rg_tab"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:background="@mipmap/tab_bg"
            android:layout_width="wrap_content"
            android:layout_height="40dp">
        <RadioButton
                android:gravity="center"
                android:id="@+id/rb_system"
                android:textColor="@drawable/app_select_rb_text_color"
                android:layout_gravity="center"
                android:text="@string/setting_system"
                android:button="@null"
                android:layout_width="80dp"
                android:layout_height="40dp"/>

        <RadioButton
                android:id="@+id/rb_car"
                android:textColor="@drawable/app_select_rb_text_color"
                android:gravity="center"
                android:layout_marginLeft="30dp"
                android:text="@string/setting_car"
                android:button="@null"
                android:layout_width="80dp"
                android:layout_height="40dp"/>
    </RadioGroup>

    <LinearLayout
            android:gravity="center"
            android:layout_marginTop="53dp"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <ImageView
                android:visibility="invisible"
                android:id="@+id/iv_tab_1"
                android:src="@mipmap/tap_line"
                android:layout_width="80dp"
                android:layout_height="wrap_content"/>

        <ImageView
                android:visibility="invisible"
                android:id="@+id/iv_tab_2"
                android:src="@mipmap/tap_line"
                android:layout_marginLeft="30dp"
                android:layout_width="80dp"
                android:layout_height="wrap_content"/>
    </LinearLayout>


    <LinearLayout
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:background="@drawable/shape_button_white_green"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="200dp"
                    android:layout_height="60dp">
                <ImageView
                        android:src="@mipmap/list_icon_connect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:textSize="@dimen/sp_16"
                        android:textColor="@color/white"
                        android:layout_marginLeft="20dp"
                        android:gravity="center"
                        android:text="@string/connect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_marginLeft="40dp"
                    android:background="@drawable/shape_button_white_green"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="200dp"
                    android:layout_height="60dp">
                <ImageView
                        android:src="@mipmap/list_icon_connect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:textSize="@dimen/sp_16"
                        android:textColor="@color/white"
                        android:layout_marginLeft="20dp"
                        android:gravity="center"
                        android:text="@string/common"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>




        <LinearLayout
                android:layout_marginTop="40dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:background="@drawable/shape_button_white_green"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="200dp"
                    android:layout_height="60dp">
                <ImageView
                        android:src="@mipmap/list_icon_connect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:textSize="@dimen/sp_16"
                        android:textColor="@color/white"
                        android:layout_marginLeft="20dp"
                        android:gravity="center"
                        android:text="@string/mobile_connect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_marginLeft="40dp"
                    android:background="@drawable/shape_button_white_green"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="200dp"
                    android:layout_height="60dp">
                <ImageView
                        android:src="@mipmap/list_icon_connect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:textSize="@dimen/sp_16"
                        android:textColor="@color/white"
                        android:layout_marginLeft="20dp"
                        android:gravity="center"
                        android:text="@string/audio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
