<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal">

    <RelativeLayout
            android:layout_weight="1"
            android:background="#037ee5"
            android:layout_width="0dp"
            android:layout_height="match_parent">

        <TextView
                android:textColor="@color/white"
                android:id="@+id/tv_back"
                android:padding="10dp"
                android:text="返回"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <RadioGroup
                android:orientation="vertical"
                android:layout_margin="40dp"
                android:layout_marginRight="30dp"
                android:layout_centerInParent="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <RadioButton
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:text="@string/bluetooth"
                    android:button="@null"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>

            <View
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_05"/>

            <RadioButton
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:text="@string/hot"
                    android:button="@null"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>

            <View
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_05"/>

            <RadioButton
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:text="@string/wifi"
                    android:button="@null"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>

            <View
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_05"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="101dp"/>
        </RadioGroup>
    </RelativeLayout>


    <RelativeLayout
            android:background="#19589d"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_marginRight="10dp"
                android:layout_marginLeft="30dp"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

           <RelativeLayout
                   android:layout_width="match_parent"
                   android:layout_height="50dp">
               <TextView
                       android:layout_centerVertical="true"
                       android:gravity="center_vertical"
                       android:textSize="20sp"
                       android:textColor="@color/white"
                       android:text="蓝牙开关"
                       android:layout_width="wrap_content"
                       android:layout_height="50dp"/>
               <CheckBox
                       android:layout_centerInParent="true"
                       android:gravity="center"
                       android:layout_alignParentRight="true"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"/>
           </RelativeLayout>

            <View
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_05"/>
            <TextView
                    android:gravity="center_vertical"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:text="本机名称"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>

            <View
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_05"/>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">
                <TextView
                        android:layout_centerVertical="true"
                        android:gravity="center_vertical"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:text="蓝牙可见性"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"/>
                <CheckBox
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:layout_alignParentRight="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </RelativeLayout>

            <View
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_05"/>
            <TextView
                    android:gravity="center_vertical"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:text="已配对设备"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>

            <View
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_05"/>
            <TextView
                    android:gravity="center_vertical"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:text="可用设备"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>

            <View
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_05"/>

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
